feat:adjust text

--- a/ucapan.html
+++ b/ucapan.html
@@ -116,7 +116,7 @@
           href="https://wa.me/6289669643272?text=aku%20disini%20mau%20menjawab%20pertanyaan%20mu."
           target="_blank"
         >
-          💬 Disini yah jawabnya
+          💬 Disini yah jawabnya, bisa berkali kali kok hehe
         </a>
       </div>
     </div>
